# Arjuna_demo_codes

./: Newrro_obs_script.py  README.md  algorithm_selector_rviz.py  arjuna.launch.py  code.ino  go_to_point_rviz.py  go_to_point_terminal.py  interactive_calibration.py  multi_point_rviz.py  multi_point_terminal.py  nav2_params.yaml  obstacle_avoidance.py  save_map.launch.py  setup.cfg  slam_mapping.launch.py  subs.py
arjuna/: README.md  setup.py
arjuna/arjuna/config/: mapper_params_online_async.yaml  nav2_params.yaml
arjuna/arjuna/launch/: arjuna.launch.py  nav2_navigation.launch.py  save_map.launch.py  web_gui.launch.py
arjuna/arjuna/maps/: demo2_map.pgm  demo2_map.yaml  demo_map.pgm  demo_map.yaml  final_map.pgm  final_map.yaml  my_map.yaml
arjuna/arjuna/rviz/: arjuna.rviz
arjuna/arjuna/scripts/: web_gui.py
arjuna/arjuna/scripts/navigation/: go_to_point_rviz.py  (+2 more)
arjuna/arjuna/webpage/: Arjuna.css  Arjuna.html  Arjuna.js
arjuna_controller/: README.md  setup.py
arjuna_controller/arjuna_controller/: controller_node.py
arjuna_description/: CMakeLists.txt  README.md  package.xml
arjuna_description/Frames/: frames_2026-06-03_22.20.55.gv
arjuna_description/launch/: all_in_one.launch.py  gazebo.launch.py  rviz.launch.py
arjuna_description/urdf/: arjuna.sdf  arjuna.urdf
arjuna_description/worlds/: arjuna.world  maps_to_world.py
motor_ops/: README.md  setup.py
motor_ops/motor_ops/: interactive_calibration.py  ticks_pub.py
odometry/: CMakeLists.txt  README.md
odometry/config/: ekf.yaml
odometry/src/: ekf_data_pub.cpp  rviz_data_pub.cpp
(+12 files in other folders)
